fixing widht issues on mobile

--- a/src/styles/workPage.css
+++ b/src/styles/workPage.css
@@ -36,6 +36,7 @@
 a {
   width: 100%;
   word-wrap: break-word;
+  text-align: center;
 }
 
 .card {
